WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
179131
[Performance] Painting <video> to canvas spends a lot of time in URL getting and parsing
https://bugs.webkit.org/show_bug.cgi?id=179131
Summary
[Performance] Painting <video> to canvas spends a lot of time in URL getting ...
Jer Noble
Reported
2017-11-01 11:22:10 PDT
[Performance] Painting <video> to canvas spends a lot of time in URL getting and parsing
Attachments
Patch
(15.82 KB, patch)
2017-11-01 11:27 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
Patch for landing
(15.82 KB, patch)
2017-11-01 14:23 PDT
,
Jer Noble
jer.noble
: commit-queue+
Details
Formatted Diff
Diff
Patch for landing
(15.81 KB, patch)
2017-11-01 14:25 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2017-11-01 11:26:55 PDT
<
rdar://problem/35297356
>
Jer Noble
Comment 2
2017-11-01 11:27:45 PDT
Created
attachment 325599
[details]
Patch
Build Bot
Comment 3
2017-11-01 11:30:02 PDT
Attachment 325599
[details]
did not pass style-queue: ERROR: Source/WebCore/platform/graphics/avfoundation/objc/MediaPlayerPrivateAVFoundationObjC.h:208: The parameter name "url" adds no information, so it should be removed. [readability/parameter_name] [5] Total errors found: 1 in 7 files If any of these errors are false positives, please file a bug against check-webkit-style.
Eric Carlson
Comment 4
2017-11-01 12:49:22 PDT
Comment on
attachment 325599
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=325599&action=review
> Source/WebCore/platform/graphics/avfoundation/objc/MediaPlayerPrivateAVFoundationObjC.h:208 > + void createAVAssetForURL(const URL& url) override;
Nit: "url" isn't necessary.
Jer Noble
Comment 5
2017-11-01 14:23:44 PDT
Created
attachment 325630
[details]
Patch for landing
Jer Noble
Comment 6
2017-11-01 14:25:39 PDT
Created
attachment 325631
[details]
Patch for landing
WebKit Commit Bot
Comment 7
2017-11-01 14:42:02 PDT
Comment on
attachment 325631
[details]
Patch for landing Clearing flags on attachment: 325631 Committed
r224297
: <
https://trac.webkit.org/changeset/224297
>
WebKit Commit Bot
Comment 8
2017-11-01 14:42:04 PDT
All reviewed patches have been landed. Closing bug.
Ryan Haddad
Comment 9
2017-11-01 16:50:46 PDT
This change broke the Windows build:
https://build.webkit.org/builders/Apple%20Win%20Release%20%28Build%29/builds/5727/steps/compile-webkit/logs/stdio
Here is the log after an attempt to fix it in
https://trac.webkit.org/changeset/224305/webkit
:
https://build.webkit.org/builders/Apple%20Win%20Release%20%28Build%29/builds/5732/steps/compile-webkit/logs/stdio
Eric Carlson
Comment 10
2017-11-01 17:30:55 PDT
(In reply to Ryan Haddad from
comment #9
)
> This change broke the Windows build: >
https://build.webkit.org/builders/Apple%20Win%20Release%20%28Build%29/builds/
> 5727/steps/compile-webkit/logs/stdio > > Here is the log after an attempt to fix it in >
https://trac.webkit.org/changeset/224305/webkit
: >
https://build.webkit.org/builders/Apple%20Win%20Release%20%28Build%29/builds/
> 5732/steps/compile-webkit/logs/stdio
Looks like you forgot to update MediaPlayerPrivateAVFoundationCF::createAVAssetForURL for the signature change.
Ryan Haddad
Comment 11
2017-11-02 08:43:27 PDT
The build was fixed with
https://trac.webkit.org/changeset/224311/webkit
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug